[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
#TODO remove blocking feature if based on async
reqwest = {version = "0.11.11", features = ["blocking"]}
serde_json = "1.0.85"